// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumbs Breadcrumbs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <nav
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 YsrCi"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-159m8ch-1 hjQfcj"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <a
            class="Link-sc-1fcpbo4-0 glpzUC"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <nav
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 YsrCi"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-159m8ch-1 hjQfcj"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <a
            class="Link-sc-1fcpbo4-0 glpzUC"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <a
            class="Link-sc-1fcpbo4-0 glpzUC"
            color="darkBlue"
            font-size="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Components/Breadcrumbs without link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <nav
      class="Box-xda4ls-0 Flex-sc-1whlq91-0 YsrCi"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-159m8ch-1 hjQfcj"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <a
            class="Link-sc-1fcpbo4-0 glpzUC"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <a
            class="Link-sc-1fcpbo4-0 glpzUC"
            color="darkBlue"
            font-size="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 hwYwou"
        >
          <p
            class="Text-sc-15glbbx-0 fQQAHU"
            color="darkBlue"
            font-size="medium"
          >
            Current Tenant
          </p>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-159m8ch-0 cVjBWN seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-sc-150w9kl-0 ghfVAt nds-icon--rightArrow"
            fill="currentColor"
            focusable="false"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;
